--- a/portifolio/portifolio.html
+++ b/portifolio/portifolio.html
@@ -19,8 +19,8 @@
         <div class="container">
             <ul>
                 <li><a href="#">Início</a></li>
-                <li><a href="#exercicios">Exercícios</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="#exercise-section">Exercícios</a></li>
+                <li><a href="#container_footer">Contato</a></li>
             </ul>
         </div>
     </nav>
@@ -91,7 +91,7 @@
     </main>
 
     <footer>
-        <div class="container">
+        <div class="container_footer">
             <p>&copy; 2025 Lucas Bareli - Todos os direitos reservados</p>
         </div>
     </footer>
