--- a/aula_02/fatorial.html
+++ b/aula_02/fatorial.html
@@ -14,9 +14,9 @@
         for (let i = 1; i <= factorialNumber; i++) {
             factorial *= i
         }
-        console.log(`The factorial of ${factorialNumber} is ${factorial}`)
+        document.write(`The factorial of ${factorialNumber} is ${factorial}`)
     } else {
-        console.log("Invalid input")
+        document.write("Invalid input")
     }
     </script>
 </body>
