--- a/aula_02/multiplos.html
+++ b/aula_02/multiplos.html
@@ -12,10 +12,10 @@
         const number_2 = Number(prompt("Write a second number:"))
 
         if (number_1 % number_2 === 0) {
-            console.log(`${number_1} is multiple this ${number_2}`)
+            document.write(`${number_1} is multiple this ${number_2}`)
             alert(`${number_1} is multiple this ${number_2}.`)
         } else {
-            console.log(`${number_1} inst multiple this ${number_2}`)
+            document.write(`${number_1} inst multiple this ${number_2}`)
             alert(`${number_1} inst multiple this ${number_2}`)
         }
 
