--- a/portifolio/portifolio.html
+++ b/portifolio/portifolio.html
@@ -141,31 +141,106 @@
             </section>
 
             <!--===== Exercises =====-->
-            <h2 class="section-title">Exercises</h2>
-            <section id="exercise-section">
+            <h2 class="section-title">Class</h2>
+            <section class="exercise-section">
                 <div class="exercise-card" onclick="window.open('https://www.figma.com/design/Y7YOCIStb8oHVLMTPEkGKR/Grande-Campinas?node-id=0-1&t=GIgxlqkqAGraNXFg-1')">
                     <h3>Prototype</h3>
-                    <p>Prototype using Figma about my website Grande Campinas</p>
+                    <p class="about-class">Prototype using Figma about my website Grande Campinas</p>
+                    <p class="class-pwfe">#aula01</p>
                 </div>
                 <div class="exercise-card" onclick="window.open('../aula_01/aula01.html', '_blank')">
-                    <h3>Repeat Loops</h3>
-                    <p>My first class using Java Script, learning about repeat loops</p>
+                    <h3>Class Repeat Loops</h3>
+                    <p class="about-class">My first class using Java Script, learning about repeat loops</p>
+                    <p class="class-pwfe">#aula02</p>
                 </div>
+                <div class="exercise-card" onclick="window.open('../aula_03/aula_03.html', '_blank')">
+                    <h3>Class Functions</h3>
+                    <p class="about-class">In this class we learned about every types of functions</p>
+                    <p class="class-pwfe">#aula03</p>
+                </div>
+                <div class="exercise-card" onclick="window.open('../aula_03/dom.html', '_blank')">
+                    <h3>Dom</h3>
+                    <p class="about-class">In this class we learned about every types of functions</p>
+                    <p class="class-pwfe">#aula03</p>
+                </div>
+                <div class="exercise-card" onclick="window.open('../aula_03/restaurante.html', '_blank')">
+                    <h3>Restaurant</h3>
+                    <p class="about-class">Here we have a little bit about Bareli Restaurant</p>
+                    <p class="class-pwfe">#aula03</p>
+                </div>
+                <div class="exercise-card" onclick="window.open('../aula_04/arrays.html', '_blank')">
+                    <h3>Class Arrays</h3>
+                    <p class="about-class">Here we have a class about arrays when we learned how we can use it</p>
+                    <p class="class-pwfe">#aula04</p>
+                </div>
+            </section>
+
+            <h2 class="section-title">Exercises</h2>
+            <section class="exercise-section">
                 <div class="exercise-card" onclick="window.open('../aula_02/area.html', '_blank')">
                     <h3>Area</h3>
-                    <p>Exercise where we can discover the area about geometrics things</p>
+                    <p class="about-class">Exercise where we can discover the area about geometrics things</p>
+                    <p class="class-pwfe">#lista01</p>
                 </div>
                 <div class="exercise-card" onclick="window.open('../aula_02/bissexto.html', '_blank')">
                     <h3>Leap Year</h3>
-                    <p>Exercise where we find out which are the leap years</p>
+                    <p class="about-class">Exercise where we find out which are the leap years</p>
+                    <p class="class-pwfe">#lista01</p>
                 </div>
                 <div class="exercise-card" onclick="window.open('../aula_02/cambio.html', '_blank')">
                     <h3>Exchange</h3>
-                    <p>Exercise where we can discover the taxation according to the currency</p>
+                    <p class="about-class">Exercise where we can discover the taxation according to the currency</p>
+                    <p class="class-pwfe">#lista01</p>
                 </div>
                 <div class="exercise-card" onclick="window.open('../aula_02/diferenca.html', '_blank')">
                     <h3>Difference</h3>
-                    <p>Exercise where we can discover the difference between two numbers</p>
+                    <p class="about-class">Exercise where we can discover the difference between two numbers</p>
+                    <p class="class-pwfe">#lista01</p>
+                </div>
+                <div class="exercise-card" onclick="window.open('../aula_02/fatorial.html', '_blank')">
+                    <h3>Factorial</h3>
+                    <p class="about-class">In this exercise we can discover the factorization of any number</p>
+                    <p class="class-pwfe">#lista01</p>
+                </div>
+                <div class="exercise-card" onclick="window.open('../aula_02/imc.html', '_blank')">
+                    <h3>IMC</h3>
+                    <p class="about-class">Here we can discover the IMC (body mass index)</p>
+                    <p class="class-pwfe">#lista01</p>
+                </div>
+                <div class="exercise-card" onclick="window.open('../aula_02/media.html', '_blank')">
+                    <h3>Media</h3>
+                    <p class="about-class">Here we can discover the Media between two grades</p>
+                    <p class="class-pwfe">#lista01</p>
+                </div>
+                <div class="exercise-card" onclick="window.open('../aula_02/multiplos.html', '_blank')">
+                    <h3>Multiples</h3>
+                    <p class="about-class">In this exercise we can find out which numbers are multiples of each other</p>
+                    <p class="class-pwfe">#lista01</p>
+                </div>
+                <div class="exercise-card" onclick="window.open('../aula_02/par.html', '_blank')">
+                    <h3>Even</h3>
+                    <p class="about-class">In this exercise we discover which numbers are even</p>
+                    <p class="class-pwfe">#lista01</p>
+                </div>
+                <div class="exercise-card" onclick="window.open('../aula_02/ppt.html', '_blank')">
+                    <h3>Rock, Paper, Scissors</h3>
+                    <p class="about-class">Here we can play the game Rock, Paper, Scissors</p>
+                    <p class="class-pwfe">#lista01</p>
+                </div>
+                <div class="exercise-card" onclick="window.open('../aula_02/tabuada.html', '_blank')">
+                    <h3>Multiplication Table</h3>
+                    <p class="about-class">We can find out the multiplication table of the number you are curious about</p>
+                    <p class="class-pwfe">#lista01</p>
+                </div>
+                <div class="exercise-card" onclick="window.open('../aula_02/temperatura.html', '_blank')">
+                    <h3>Temperature</h3>
+                    <p class="about-class">We can find out the temperature that we select</p>
+                    <p class="class-pwfe">#lista01</p>
+                </div>
+                <div class="exercise-card" onclick="window.open('../lista_02/calculadora.html', '_blank')">
+                    <h3>Calculator</h3>
+                    <p>Here we have a Calculator that realize four operations</p>
+                    <p class="class-pwfe">#lista02</p>
                 </div>
             </section>
             <!--===== CONTACT =====-->
