--- a/lista_01/area.html
+++ b/lista_01/area.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Area</title>
+    <script src="area.css"></script>
 </head>
 <body>
     <h1>Area</h1>
