--- a/portifolio/portifolio.html
+++ b/portifolio/portifolio.html
@@ -38,8 +38,7 @@
             <!--===== HOME =====-->
             <section class="home bare-grid" id="home">
                 <div class="home_data">
-                    <h1 class="home_title">Hi,<br>I'am <span class="home_title-color">Lucas Bareli</span><br> Web Developer</h1>
-
+                    <h1 class="home_title">Welcome to my <br><span class="home_title-color">Portfolio!!!</span></h1>
                     <a href="#contact" class="button">Contact</a>
                 </div>
 
@@ -49,15 +48,7 @@
                 </div>
 
                 <div class="home_img">
-                    <svg class="home_bare" viewBox="0 0 479 467" xmlns="http://www.w3.org/2000/svg">
-                        <mask id="mask0" mask-type="alpha">
-                            <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
-                        </mask>
-                        <g mask="url(#mask0)">
-                            <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
-                            <image href="images/desenho-3D.png" x="50" y="72" width="400" height="400"/>
-                        </g>
-                    </svg>
+                    <img src="images/BARELI.png" alt="Logo Bareli">
                 </div>                
             </section>
 
@@ -131,6 +122,9 @@
                             </div>
                             <div>
                                 <span class="skills_percentage">100%</span>
+                            </div>
+                            <div class="skills-data-img">
+                                <img src="images/Graphic.png" alt="">
                             </div>
                         </div>
                     </div>
