--- a/portifolio/portifolio.html
+++ b/portifolio/portifolio.html
@@ -123,13 +123,13 @@
                             <div>
                                 <span class="skills_percentage">100%</span>
                             </div>
-                            <div class="skills-data-img">
-                                <img src="images/Graphic.png" alt="">
-                            </div>
                         </div>
                     </div>
                     
-                    <div>              
+                    <div>         
+                        <div class="skills-data-img">
+                            <img src="images/Graphic.png" alt="Graphic" style="margin-left: 140px;">
+                        </div>     
                         <img src="assets/img/work3.jpg" alt="" class="skills_img">
                     </div>
                 </div>
